<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="button_text_search">Поиск</string>
    <string name="button_text_mediatech">Медиатека</string>
    <string name="button_text_settings">Настройки</string>
    <string name="settings_title">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="support">Написать в поддержку</string>
    <string name="send">Поделиться приложением</string>
    <string name="privacy">Пользовательское соглашение</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_mediatech">MediatechActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    -- strings for empty erros in the xml screen
    <string name="null_string"></string>
</resources>