<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:paddingVertical="4dp"
            android:paddingRight="52dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:foreground="?attr/selectableItemBackground">

                    <ImageView
                        android:id="@+id/back_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/arrow_back">
                    </ImageView>
                </FrameLayout>


                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="12dp"
                    android:paddingLeft="12dp"
                    android:paddingRight="86dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_title"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:fontFamily="@font/ys_medium"/>
                </FrameLayout>

            </LinearLayout>

        </FrameLayout>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="12dp"
        android:paddingTop="24dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="21dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dark_theme"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:fontFamily="@font/ys_medium"
                    android:paddingLeft="16dp"
                    android:paddingRight="44dp" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end">
            </Switch>

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="21dp"
>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send"
                android:textColor="@color/black"
                android:layout_gravity="start"
                android:paddingLeft="16dp"
                android:textSize="22sp"
                android:fontFamily="@font/ys_medium"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:src="@drawable/share">
            </ImageView>

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="21dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/support"
                android:layout_gravity="start"
                android:textColor="@color/black"
                android:paddingLeft="16dp"
                android:textSize="22sp"
                android:fontFamily="@font/ys_medium"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:src="@drawable/operator">
            </ImageView>

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="21dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy"
                android:textColor="@color/black"
                android:layout_gravity="start"
                android:paddingLeft="16dp"
                android:textSize="22sp"
                android:fontFamily="@font/ys_medium"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:src="@drawable/arrow_forward">
            </ImageView>

        </FrameLayout>


    </LinearLayout>

</LinearLayout>